260119AP
    - MAX_SET is 63 on 64bit
    - more LONGINT dependencies removed
    - o2c_stage2 compiled

260116AP
    - o2c_stage0 compiled

260115AP
    - start of 64bit port
    - o2gcc script to ease porting (compiler flags)

190515AP
	- added missing sym/ directory

190513AP V1.16.3
	- patched to compile with gcc-mp-5 on High Sierra

181115AP V1.16.2
	- install target
	- man pages in postscript format, 
	- customized o2c.red (contains install dir)
	- install.docs installs CHANGES COPYING ChangeLog
	  KNOWN_PROBLEMS and README
	- enabled Boehm GC by default (expected in /opt/local/lib)
	  to install on macOS: "port install boehmgc +universal"
	- replaced C compiler -I- option with -iquote
	- fixed SETTAG() macro in _OGCC.h to not use casted lvalue assignment

181114AP V1.16.1
	- patched to compile with apple-gcc-4.2 32bit only